[tool.poetry]
name = "pf-likelihood-ratio-stuff"
version = "0.1.0"
description = ""
authors = ["Ben Pattison <pattison.ben@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^24.10.0"
jupyter = "^1.1.1"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
scipy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
